SubVersion: $Id$

Set svn:eol property to native on all files
	
To do : 
- key codes for TI8x (check)
//- manage ERR packets which can be received at any time
- macros.h should be endian dependant (configure check ?)

Log:

- 16/03/2006, version 0.0.7: roms
	- fixed bug in TI92 recv_backup

- 21/02/2006, version 0.0.6: roms
	- switched to ticonv library
	- send HOME key before dumping
	- don't list some system variables which appears in dirlist: regCoef and regEq.
	- fixed is_ready which checked the LSB instead of the MSB status word
	- added 2 functions for adding/removing an entry from a dirlist tree
	- directory list is now free'd
	- fixed TI73 sending & receiving of FLASH apps
	- fixed OS version formatting
	- set hw revision to -1 (n/a) for TI8x calcs
	- don't use static Flash/FileContent structures: they are badly released because often not zero'ed.
	
- 20/02/2006, version 0.0.5: roms
	- error message is a glib allocated string for now.

- 23/01/2006, version 0.0.4: roms
	- modified to follow ticables2 API changes.
	- fixed critical bug in ticalcs2.pc.in: the header location was include/tilp instead of include/tilp2

- 24/09/2005, version 0.0.3: roms
	- fixed critical bug in dbus_send: use len instead of length which makes 64KB blocks copied as 0B blocks :-(

- 14/09/2005, version 0.0.2: roms
	- fixed/updated recv_var_ns routines
	- fixed build of /docs (Tijl)
	- TI73/8X+ auto-probe support updated. Calculator probing updated.
		Note: host check has been disabled in dbus_recv_ because ticalcs_probe 
		may be used on any TI9x calc.
	- fixed non-exported symbol because exportX.h didn't include config.h (fvisibility).

- 15/05/2005, version 0.0.1: roms
	- logging reworked (use glib)
	- a single public header with functions & defs, others are private
	- slightly fixed namespace sheme
	- use strong types such as TiCalcModel, ...
	- glib is used for logging (not very much for strings)
	- documentation system has been changed
	- functions pointers have been removed