@@ -11,6 +11,7 @@ Log:
 
 - 16/03/2006, version 0.0.7: roms
 	- fixed bug in TI92 recv_backup
+	- added periodic refresh from callbacks
 
 - 21/02/2006, version 0.0.6: roms
 	- switched to ticonv library
